# django-template

./: README.md
.github/workflows/: docker-image.yml
Django_template/: .env.template  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
Django_template/myproject/myapp/management/commands/: makesuperuser.py
Django_template/myproject/myproject/: settings.py  urls.py
PythonProject1/secret_test/: docker-compose.yml  pyproject.toml
PythonProject2/: docker-compose.yml
doker_test/: .gitignore
pythonProject4/eshop/eshop/: settings.py  urls.py
pythonProject5/estore/: db.sqlite3
pythonProject5/estore/eshop/: admin.py  models.py  serializers.py  urls.py  views.py
pythonProject5/estore/eshop/migrations/: 0001_initial.py
pythonProject5/estore/eshop/templates/eshop/: order-list.html  order_form.html  product-details.html  store.html
pythonProject5/estore/estore/: settings.py  urls.py
